[FIX] web_enterprise: slider track in dark mode
Before this commit the input type range slider track is invisible in
dark mode.

After this commit the color of slider's tracks are now visible.

closes odoo/enterprise#63162

Related: odoo/odoo#166825

--- a/web_enterprise/static/src/scss/bootstrap_overridden.dark.scss
+++ b/web_enterprise/static/src/scss/bootstrap_overridden.dark.scss
@@ -82,6 +82,7 @@ $input-border-color: $o-gray-300 !default;
 $input-placeholder-color: mix($o-gray-500, $o-gray-600) !default;
 $input-focus-bg: inherit !default;
 $form-range-thumb-active-bg: lighten($o-brand-primary, 10%);
+$form-range-track-bg: $o-gray-300 !default;
 
 $form-switch-color: rgba($o-black, .5) !default;
 $form-switch-focus-color: $o-black !default;
